--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -193,7 +193,6 @@ steps:
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME sphere/held_suarez_rhoe_int --job_id sphere_held_suarez_rhoe_int"
         artifact_paths: "sphere_held_suarez_rhoe_int/*"
 
-
   - group: "Performance"
     steps:
 
@@ -213,3 +212,13 @@ steps:
         env:
           CI_PERF_CPUPROFILE: "true"
 
+  - wait: ~
+    continue_on_failure: true
+
+  - label: ":robot_face: Print new mse tables"
+    command: "julia --color=yes --project=examples post_processing/print_new_mse.jl"
+
+  - wait
+
+  - label: ":robot_face: Move main results"
+    command: "julia --color=yes --project=examples post_processing/move_output.jl"
