--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -175,4 +175,8 @@ steps:
 
       - label: ":computer: equilibrium moisture held suarez (ρe)"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME sphere/held_suarez_rhoe_equilmoist --FLOAT_TYPE Float32"
-        artifact_paths: "examples/hybrid/sphere/output/held_zuarez_rhoe_equilmoist/Float32/*"
+        artifact_paths: "examples/hybrid/sphere/output/held_suarez_rhoe_equilmoist/Float32/*"
+
+      - label: ":computer: equilibrium moisture held suarez (ρe_int)"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME sphere/held_suarez_rhoe_int_equilmoist --FLOAT_TYPE Float32"
+        artifact_paths: "examples/hybrid/sphere/output/held_suarez_rhoe_int_equilmoist/Float32/*"
