--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -35,5 +35,5 @@ steps:
     steps:
 
       - label: ":computer: dry held-suarez (ρθ)"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME sphere/held_suarez_rhotheta --FLOAT_TYPE Float32 --t_end 103680000" # 1200 days
-        artifact_paths: "examples/hybrid/sphere/output/held_suarez_rhotheta/Float32/*"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME sphere/held_suarez_rhotheta --FLOAT_TYPE Float32 --t_end 103680000 --output_dir longrun_hs" # 1200 days
+        artifact_paths: "longrun_hs/*"
