Try to fix long runs

--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -12,6 +12,9 @@ agents:
   config: cpu
   queue: central
   slurm_ntasks: 1
+  slurm_time: 10:00:00
+
+timeout_in_minutes: 600
 
 steps:
   - label: "init :computer:"
