--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -12,9 +12,9 @@ agents:
   config: cpu
   queue: central
   slurm_ntasks: 1
-  slurm_time: 10:00:00
+  slurm_time: 20:00:00
 
-timeout_in_minutes: 600
+timeout_in_minutes: 1200
 
 steps:
   - label: "init :computer:"
@@ -39,10 +39,10 @@ steps:
       # TODO: Add all milestone long simulation runs
 
       - label: ":computer: held suarez (ρe)"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME sphere/held_suarez_rhoe --t_end 103680000 --job_id longrun_hs" # 1200 days
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME sphere/held_suarez_rhoe --t_end 103680000 --job_id longrun_hs --dt_save_to_sol 8640000" # 1200 days
         artifact_paths: "longrun_hs_rhoe/*"
 
       - label: ":computer: held suarez (ρe_int)"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME sphere/held_suarez_rhoe_int --t_end 103680000 --job_id longrun_hs_rhoeint" # 1200 days
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME sphere/held_suarez_rhoe_int --t_end 103680000 --job_id longrun_hs_rhoeint --dt_save_to_sol 8640000" # 1200 days
         artifact_paths: "longrun_hs_rhoeint/*"
 
