--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -41,8 +41,24 @@ steps:
       - label: ":computer: held suarez (ρe)"
         command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --TEST_NAME sphere/held_suarez_rhoe --t_end 103680000 --job_id longrun_hs_rhoe --dt_save_to_sol 8640000 --enable_threading true" # 1200 days
         artifact_paths: "longrun_hs_rhoe/*"
+        agents:
+          slurm_cpus_per_task: 8
 
       - label: ":computer: held suarez (ρe_int)"
         command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --TEST_NAME sphere/held_suarez_rhoe_int --t_end 103680000 --job_id longrun_hs_rhoeint --dt_save_to_sol 8640000 --enable_threading true" # 1200 days
         artifact_paths: "longrun_hs_rhoeint/*"
+        agents:
+          slurm_cpus_per_task: 8
+
+      - label: ":computer: held suarez (ρe)"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --TEST_NAME sphere/held_suarez_rhoe --t_end 103680000 --dt 600 --job_id longrun_hs_rhoe_largerdt --dt_save_to_sol 8640000 --enable_threading true" # 1200 days
+        artifact_paths: "longrun_hs_rhoe_largerdt/*"
+        agents:
+          slurm_cpus_per_task: 8
+
+      - label: ":computer: held suarez (ρe_int)"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --TEST_NAME sphere/held_suarez_rhoe_int --t_end 103680000 --dt 600 --job_id longrun_hs_rhoeint_largerdt --dt_save_to_sol 8640000 --enable_threading true" # 1200 days
+        artifact_paths: "longrun_hs_rhoeint_largerdt/*"
+        agents:
+          slurm_cpus_per_task: 8
 
