--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ CLIMAParameters = "0.4"
 ClimaCore = "0.9, 0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
-CloudMicrophysics = "0.3"
+CloudMicrophysics = "0.3, 0.4"
 DiffEqCallbacks = "2"
 IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
