--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
 OrdinaryDiffEq = "5.64.0, 6"
 StaticArrays = "1"
-Thermodynamics = "0.5, 0.6"
+Thermodynamics = "0.5, 0.6, 0.7"
 UnPack = "1"
 
 [extras]
