--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -65,8 +65,8 @@ ArgParse = "1.1"
 ArtifactWrappers = "0.1"
 AtmosphericProfilesLibrary = "0.1"
 CLIMAParameters = "0.4"
-ClimaCore = "0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9"
-CloudMicrophysics = "0.3"
+ClimaCore = "0.9, 0.10"
+CloudMicrophysics = "0.4"
 Dierckx = "0.5"
 Distributions = "0.25"
 DocStringExtensions = "0.8"
@@ -83,13 +83,13 @@ PoissonRandom = "0.4"
 PrettyTables = "1.2"
 RootSolvers = "0.2, 0.3"
 SciMLBase = "1"
-StaticArrays = "1.2"
+StaticArrays = "1"
 StatsBase = "0.33"
 StochasticDiffEq = "6.41"
 SurfaceFluxes = "0.2"
 TerminalLoggers = "0.1"
-Thermodynamics = "0.5, 0.6"
-UnPack = "1.0"
+Thermodynamics = "0.7"
+UnPack = "1"
 julia = "1.5"
 
 [extras]
