--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,7 +1,6 @@
 [deps]
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CLIMAParameters = "6eacf6c3-8458-43b9-ae03-caf5306d3d53"
-ClimaAtmos = "b2c96348-7fb7-4fe0-8da9-78d88439e717"
 ClimaCore = "d414da3d-4745-48bb-8d80-42e94e092884"
 ClimaCorePlots = "cf7c7e5a-b407-4c48-9047-11a94a308626"
 ClimaCoreVTK = "c8b6d40d-e815-466f-95ae-c48aefa668fa"
@@ -31,13 +30,13 @@ ClimaCoreVTK = "0.6, 0.7"
 DiffEqCallbacks = "2"
 Documenter = "0.27"
 DocumenterTools = "0.1"
-IntervalSets = "0.5"
+IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
 MPI = "0.19"
-OrdinaryDiffEq = "6"
+OrdinaryDiffEq = "5.64.0"
 Plots = "1"
 StaticArrays = "1"
-Thermodynamics = "0.5"
+Thermodynamics = "0.7"
 UnPack = "1"
 
 [extras]
