--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ CloudMicrophysics = "0.4"
 DiffEqCallbacks = "2"
 IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
-OrdinaryDiffEq = "5.64.0"
+OrdinaryDiffEq = "5.64.0, 6"
 StaticArrays = "1"
 Thermodynamics = "0.7"
 UnPack = "1"
