--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -177,6 +177,10 @@ steps:
   - group: "Milestones"
     steps:
 
+      - label: ":computer: single column radiative equilibrium"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME single_column_radiative_equilibrium --job_id sphere_single_column_radiative_equilibrium"
+        artifact_paths: "sphere_single_column_radiative_equilibrium/*"
+
       - label: ":computer: baroclinic wave (ρe)"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME baroclinic_wave_rhoe --job_id sphere_baroclinic_wave_rhoe --regression_test true"
         artifact_paths: "sphere_baroclinic_wave_rhoe/*"
