fix moist init cond; dt reduced for moist simulations

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -167,11 +167,11 @@ steps:
         artifact_paths: "sphere_held_suarez_rhotheta/*"
 
       - label: ":computer: held suarez (ρe) equilmoist"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME held_suarez_rhoe_equilmoist --moist equil --job_id sphere_held_suarez_rhoe_equilmoist --regression_test true"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME held_suarez_rhoe_equilmoist --moist equil --job_id sphere_held_suarez_rhoe_equilmoist --regression_test true --dt 200"
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist/*"
 
       - label: ":computer: held suarez (ρe_int) equilmoist"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME held_suarez_rhoe_int_equilmoist --energy_name rhoe_int --moist equil --job_id sphere_held_suarez_rhoe_int_equilmoist --regression_test true"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME held_suarez_rhoe_int_equilmoist --energy_name rhoe_int --moist equil --job_id sphere_held_suarez_rhoe_int_equilmoist --regression_test true --dt 200"
         artifact_paths: "sphere_held_suarez_rhoe_int_equilmoist/*"
 
   - group: "Milestones"
@@ -186,11 +186,11 @@ steps:
         artifact_paths: "sphere_baroclinic_wave_rhoe/*"
 
       - label: ":computer: baroclinic wave (ρe) equilmoist"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME baroclinic_wave_rhoe_equilmoist --moist equil --job_id sphere_baroclinic_wave_rhoe_equilmoist --regression_test true"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME baroclinic_wave_rhoe_equilmoist --moist equil --job_id sphere_baroclinic_wave_rhoe_equilmoist --regression_test true --dt 200"
         artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist/*"
 
       - label: ":computer: baroclinic wave (ρe) equilmoist radiation"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME baroclinic_wave_rhoe_equilmoist_radiation --moist equil --rad clearsky --job_id sphere_baroclinic_wave_rhoe_equilmoist_radiation"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --TEST_NAME baroclinic_wave_rhoe_equilmoist_radiation --moist equil --rad clearsky --job_id sphere_baroclinic_wave_rhoe_equilmoist_radiation --dt 200"
         artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist_radiation/*"
 
       - label: ":computer: held suarez (ρe)"
