Update Project toml and Manifest files.

--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -65,7 +65,7 @@ ArgParse = "1.1"
 ArtifactWrappers = "0.1"
 AtmosphericProfilesLibrary = "0.1"
 CLIMAParameters = "0.4"
-ClimaCore = "0.9, 0.10"
+ClimaCore = "0.10"
 CloudMicrophysics = "0.4"
 Dierckx = "0.5"
 Distributions = "0.25"
