Fix overwriting CL arguments

--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -65,13 +65,13 @@ steps:
     steps:
 
       - label: ":computer: held suarez (ρe) hightop"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --high_top true --dt 300secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_hightop --dt_save_to_sol 6hours"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --z_max 45e3 --z_elem 25 --dt 300secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_hightop --dt_save_to_sol 6hours"
         artifact_paths: "longrun_hs_rhoe_hightop/*"
         agents:
           slurm_cpus_per_task: 8
 
       - label: ":computer: held suarez (ρe) equilmoist hightop"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --high_top true --vert_diff true --microphy 0M --dt 200secs --t_end 400days --upwinding none --fps 30 --job_id longrun_hs_rhoe_equil_hightop --dt_save_to_sol 6hours"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --z_max 45e3 --z_elem 25 --vert_diff true --microphy 0M --dt 200secs --t_end 400days --upwinding none --fps 30 --job_id longrun_hs_rhoe_equil_hightop --dt_save_to_sol 6hours"
         artifact_paths: "longrun_hs_rhoe_equil_hightop/*"
         agents:
           slurm_cpus_per_task: 8
