CompatHelper: bump compat for CloudMicrophysics to 0.5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ CLIMAParameters = "0.4"
 ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
-CloudMicrophysics = "0.4"
+CloudMicrophysics = "0.4, 0.5"
 DiffEqCallbacks = "2.22"
 IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
