--- a/test/Project.toml
+++ b/test/Project.toml
@@ -5,6 +5,7 @@ ClimaCore = "d414da3d-4745-48bb-8d80-42e94e092884"
 ClimaCorePlots = "cf7c7e5a-b407-4c48-9047-11a94a308626"
 ClimaCoreVTK = "c8b6d40d-e815-466f-95ae-c48aefa668fa"
 CloudMicrophysics = "6a9e3e04-43cd-43ba-94b9-e8782df3c71b"
+DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
 DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
@@ -34,6 +35,7 @@ IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
 MPI = "0.19"
 OrdinaryDiffEq = "5.64.0"
+DiffEqBase = "~6.84.0"
 Plots = "1.27"
 StaticArrays = "1.4"
 Thermodynamics = "0.7"
