Update project toml files

--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -72,7 +72,7 @@ ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
 CloudMicrophysics = "0.4"
 Dierckx = "0.5"
-DiffEqBase = "6.83"
+DiffEqBase = "~6.84.0"
 DiffEqCallbacks = "2.22"
 DiffEqNoiseProcess = "5.9"
 DiffEqOperators = "4.42"
@@ -107,7 +107,7 @@ StochasticDiffEq = "6.42"
 SurfaceFluxes = "0.3"
 TerminalLoggers = "0.1"
 Thermodynamics = "0.7"
-TurbulenceConvection = "0.24"
+TurbulenceConvection = "0.25"
 UnPack = "1"
 julia = "1.5"
 
