--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -80,6 +80,7 @@ NCDatasets = "0.11, 0.12"
 OperatorFlux = "0.1"
 OrderedCollections = "1.4"
 OrdinaryDiffEq = "5.64.0"
+DiffEqBase = "~6.84.0"
 PoissonRandom = "0.4"
 PrettyTables = "1.3"
 RootSolvers = "0.2, 0.3"
@@ -90,6 +91,7 @@ StochasticDiffEq = "6.42"
 SurfaceFluxes = "0.3"
 TerminalLoggers = "0.1"
 Thermodynamics = "0.7"
+TurbulenceConvection = "0.25"
 UnPack = "1"
 julia = "1.5"
 
